# julea

./: wscript
backend/kv/: lmdb.c
benchmark/: benchmark.c  benchmark.h
benchmark/item/: dedup-item.c  item.c
benchmark/object/: distributed-object.c
client/item/: jitem-dedup.c  jitem.c
client/object/: jdistributed-object.c
dedup/: test-debug.sh  test-dedup.sh  test-filter.sh  test-item-client.c
include/: julea-item.h
include/core/: jbackend.h
include/core/hashing/: jhash_sha256.h  jhash_xxhash.h  jhashing_impl.h
include/item/: jitem-dedup-internal.h  jitem-dedup.h  jitem-internal.h
lib/core/hashing/: jhash_sha256.c  jhash_xxhash.c
lib/item/: jitem-dedup.c  jitem.c
lib/object/: jdistributed-object.c
scripts/: spack
test/: test.c  test.h
test/item/: item.c
tools/hdf5-filter/: CMakeLists.txt  julea-hdf5-filter.c  julea-hdf5-filter.h
